chore: moves header to prevent overlap, fixes colors

--- a/src/renderer/src/components/GameDetails/GameDetails.module.css
+++ b/src/renderer/src/components/GameDetails/GameDetails.module.css
@@ -6,6 +6,10 @@
 
 .scrollArea {
   container-type: inline-size;
+  background-image: radial-gradient(circle at 100% 0%, var(--gradient-color) 0px, transparent 50%),
+    radial-gradient(circle at 0% 100%, var(--gradient-color) 0px, transparent 50%),
+    radial-gradient(circle at 100% 100%, var(--gradient-color) 0px, transparent 50%);
+  backdrop-filter: blur(20px);
 }
 
 .main {
