--- a/src/renderer/src/components/SearchControl/SearchControl.module.css
+++ b/src/renderer/src/components/SearchControl/SearchControl.module.css
@@ -6,7 +6,7 @@
   color: var(--mantine-color-placeholder);
   border: 1px solid;
   width: 100%;
-  border-color: var(--mantine-color-dark-4);
+  border-color: var(--separator-border);
   background-color: var(--mantine-color-dark-6);
 
   &.disabled {
