--- a/src/renderer/src/styles/styles.css
+++ b/src/renderer/src/styles/styles.css
@@ -15,25 +15,7 @@
   }
 }
 
-@property --gradient-color {
-  syntax: "<color>";
-  initial-value: transparent;
-  inherits: false;
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  transition: --gradient-color 0.5s ease-in-out;
-  background-image: radial-gradient(circle at 100% 0%, var(--gradient-color) 0px, transparent 50%),
-    radial-gradient(circle at 0% 100%, var(--gradient-color) 0px, transparent 50%),
-    radial-gradient(circle at 100% 100%, var(--gradient-color) 0px, transparent 50%);
-  will-change: background;
-  backdrop-filter: blur(20px);
-}
-
-/* TODO: Disable pointer events to prevent highlighting of page */
+/* TODO: Disable pointer events to prevent highlighting of page.
+Are we going to cause problems doing this? Also, should we create our
+own custom context menu? What would be it's purpose? Perhaps actions like
+"remove game", "play game" etc. */
